k8s/applications/ai/vllm-embed/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-embed-http
  namespace: vllm-embed
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'embeddings.smadja.dev'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vllm-embed
          port: 8000
